feat(Tarea02): Java segment of Tarea 2 is finished